# postgres-manual-migrate

./: .gitignore  README.md  config.yaml  default.nix  dependencies.nix  pkgs.nix  postgres-manual-migrate.cabal  shell.nix  stack.yaml
app/: Main.hs
nixdeps/: config-app.nix
src/Database/PostgreSql/: Migrate.hs
src/Database/PostgreSql/Migrate/: CLI.hs
test/: MigrationSpec.hs
