name:                postgres-manual-migrate
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hexresearch/postgres-manual-migrate#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 hexresearch
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Database.PostgreSql.Migrate
    Database.PostgreSql.Migrate.CLI
  build-depends:
      base                      >= 4.7    && < 5
    , aeson                     >= 0.11   && < 1.4
    , config-app                >= 0.1    && < 0.2
    , containers                >= 0.5    && < 0.6
    , directory-tree            >= 0.12   && < 0.13
    , exceptions                >= 0.8    && < 0.9
    , filepath                  >= 1.4    && < 1.5
    , monad-logger              >= 0.3    && < 0.4
    , optparse-applicative      >= 0.12   && < 0.14
    , persistent                >= 2.7    && < 2.8
    , persistent-postgresql     >= 2.6    && < 2.7
    , persistent-template       >= 2.5    && < 2.6
    , text                      >= 1.2    && < 1.3
    , time                      >= 1.6    && < 1.7
  default-language:    Haskell2010

executable pg-mmigrate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , aeson
    , config-app
    , optparse-applicative
    , persistent-postgresql
    , postgres-manual-migrate
  default-language:    Haskell2010

test-suite pg-mmigrate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , postgres-manual-migrate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hexresearch/postgres-manual-migrate
